images/static/css/style.css
body {
    background-color: #FEFEFE;
    color: #454545;
    font-family: 'Raleway', sans-serif;

}
.pic {
    border: 1px solid black;
    max-width: 400px;
	max-height: 400px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}
.navbar {
    border-radius:0 !important;
    min-height: 80px;
    background-color: white;
}
.navbar.navbar-default {
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}
#navbar {
    list-style-type: none;
    display: block;
}
.v-navbar-a {
    text-decoration: none;
    font-size: 14px !important;
    list-style-type: none;
}
.navbar-a {
    text-decoration: none;
    position: relative;
    display: inline-block;
    font-size: 18px !important;
}
.navbar-a::after {
  content: '';
  width: 100%;
  position: absolute;
  top: 100%;
  left: 0;
  height: 2px;
  background: red;
  transform: scaleX(0);
  transition: transform .35s ease;
}
.navbar-a:hover::after {
  transform: scaleX(1);
}

.navbar.navbar-default .navbar-collapse {
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}
.search-container {
	padding-top: 5%;
}

.album-listing {
    display:block;
    list-style-type: none;
}

.album-info {
    float:right;
}

.image {
	align-items: center;
	padding-bottom: 2%;
	border-bottom: 5px;
	/*background-color: rgba(184, 213, 227, 0.17);*/
}
.images {
    display: inline;
}

.image-icon {
   width: 100%;
	height: 100%;
    -moz-transition: all 0.3s;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
}
.image-icon:hover {
	-moz-transform: scale(1.1);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
}
.image-icon:hover .img-description-layer{
	-moz-transform: scale(1.1);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
}

.img-small {
	width: 256px;
	height: auto;
	padding-top:25px;
}


/* CSS animations from https://miketricking.github.io/bootstrap-image-hover/ */
.img-wrap {
	/* these used to be max-width and max-height (should change how the images align..?)*/
    width:100%;
	height:100%;
	float:left;
	overflow:hidden;
	position:relative;
	text-align:center;
	cursor:default;
}

.col-md-4 {
    padding: 0px;
}

.img-wrap .img-description-layer {
	width:100%;
	height:100%;
	position:absolute;
	overflow:hidden;
	top:0;
	left:0;
	opacity:0;
	background-color:rgba(0,0,0,0.5);
	-webkit-transition:all .4s ease-in-out;
	transition:all .4s ease-in-out
}

.img-wrap img {
	display:block;
	position:relative;
	-webkit-transition:all .4s linear;
	transition:all .4s linear;
}

.img-wrap h2 {
	text-transform:uppercase;
	color:#fff;
	text-align:center;
	position:relative;
	font-size:17px;
	/*background:rgba(0,0,0,0.6);*/
	-webkit-transform:translatey(-100px);
	-ms-transform:translatey(-100px);
	transform:translatey(-100px);
	-webkit-transition:all .4s ease-in-out;
	transition:all .25s ease-in-out;
	padding:10px;
}

.img-wrap:hover img {
	-ms-transform:scale(1.2);
	-webkit-transform:scale(1.2);
	transform:scale(1.2);
}

.img-wrap:hover .img-description-layer {
	opacity:1;
	filter:alpha(opacity=100);
}

.img-wrap:hover h2, .img-wrap:hover {
	opacity:1;
	filter:alpha(opacity=100);
	-ms-transform:translatey(0);
	-webkit-transform:translatey(0);
	transform:translatey(0);
}

